--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,24 +1,42 @@
-name: Deploy to Server via FTP
+# name: Deploy to Server via FTP
 
-on:
-  push:
-    branches:
-      - 2.0
+# on:
+#   push:
+#     branches:
+#       - 2.0
 
+# jobs:
+#   deploy:
+#     runs-on: ubuntu-latest
+
+#     steps:
+#     - name: Checkout Code
+#       uses: actions/checkout@v2
+
+#     - name: Deploy to FTP Server
+#       uses: SamKirkland/FTP-Deploy-Action@4.3.0
+#       with:
+#         server: ftp.digitalexcellencegroup.com
+#         username: ${{ secrets.FTP_USERNAME }}
+#         password: ${{ secrets.FTP_PASSWORD }}
+#         local-dir: ./
+#         server-dir: /
+#         git-ftp-args: --insecure # Add any additional arguments you need
+
+
+on: push
+name: 🚀 Deploy website on push
 jobs:
-  deploy:
+  web-deploy:
+    name: 🎉 Deploy
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout Code
-      uses: actions/checkout@v2
-
-    - name: Deploy to FTP Server
-      uses: SamKirkland/FTP-Deploy-Action@4.3.0
+    - name: 🚚 Get latest code
+      uses: actions/checkout@v4
+    
+    - name: 📂 Sync files
+      uses: SamKirkland/FTP-Deploy-Action@v4.3.5
       with:
         server: ftp.digitalexcellencegroup.com
         username: ${{ secrets.FTP_USERNAME }}
         password: ${{ secrets.FTP_PASSWORD }}
-        local-dir: ./
-        server-dir: /
-        git-ftp-args: --insecure # Add any additional arguments you need
